# JuggFinder

./: .env.example  .gitignore  AUDITS.md  CHANGELOG.md  MILESTONES.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLIENT_LIFECYCLE_AUTOMATION.md  DASHBOARD.md  GOALS.md  HANDOFF.md  INTEGRATION.md  OUTREACH_AUTOMATION_ROADMAP.md  SCHEDULER.md  TECH_STACK.md
docs/phases/: INDEX.md  PHASE_01_PROJECT_SETUP.md  PHASE_02_DATABASE.md  PHASE_03_CONFIG.md  PHASE_04_SCRAPER.md  PHASE_05_EVALUATOR.md  PHASE_06_AI_SCORER.md  PHASE_07_LEAD_SCORER.md  PHASE_08_PIPELINE.md  PHASE_09_API.md  PHASE_10_SCHEDULER.md  PHASE_11_FRONTEND_SETUP.md  PHASE_12_FRONTEND_CORE.md  PHASE_13_FRONTEND_PANELS.md  PHASE_14_INTEGRATION.md  PHASE_17_ENGAGEMENT_AND_INBOUND.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  types.ts
frontend/src/api/: leads.ts  scrape.ts  settings.ts
frontend/src/components/: Dashboard.tsx  FilterBar.tsx  LeadTable.tsx  (+5 more)
src/: app_state.py  main.py  pipeline.py
src/api/: schemas.py
src/config/: categories.py  settings.py
src/db/: models.py  session.py
src/dev/: __init__.py  pipeline_dry_run.py
src/engagement/: __init__.py  service.py
src/outreach/: __init__.py  email_sender.py  guardrails.py
src/scorer/: ai.py  lead.py  outreach.py
src/scraper/: evaluator.py  maps.py
src/utils/: envfile.py  logging.py
tests/: test_ai_scorer.py  test_dedup.py  test_engagement.py  test_evaluator.py  test_lead_scorer.py  test_maps_helpers.py  test_outreach_guardrails.py  test_phase17_2_inbound_and_dry_run.py
(+6 files in other folders)
